# internal/api/server.go
@@ -1,8 +1,16 @@
 package api
 
 import (
+	"encoding/json"
+	"fmt"
+	"io"
+	"net/http"
+	"net/url"
+	"strings"
+
 	"github.com/brentellingson/entra-playground/internal/config"
-	"github.com/gin-gonic/gin"
+	"github.com/brentellingson/entra-playground/internal/errhandler"
+	"github.com/golang-jwt/jwt/v5"
 )
 
 // Server represents the API server.
@@ -25,10 +33,12 @@ func NewServer(cfg *config.Config) *Server {
 }
 
 // Register registers the API routes.
-func (s *Server) Register(r *gin.Engine) {
-	r.POST("/api/token", s.Token)
-	r.GET("/api/authorize", s.Authorize)
-	r.GET("/api/validate", s.Validate)
+func (s *Server) Register() *http.ServeMux {
+	mux := http.NewServeMux()
+	mux.HandleFunc("POST /api/token", s.Token)
+	mux.HandleFunc("GET /api/authorize", s.Authorize)
+	mux.HandleFunc("GET /api/validate", s.Validate)
+	return mux
 }
 
 // Token represents the OAuth 2.0 Token Mediation Endpoint.
@@ -44,9 +54,27 @@ func (s *Server) Register(r *gin.Engine) {
 //	@Param			code_verifier	formData	string	false	"PKCE Code Verifier"
 //	@Param			redirect_uri	formData	string	true	"OAuth 2.0 Redirect URI"
 //	@Success		200				{object}	any
-//	@Router			/token [post]
-func (s *Server) Token(g *gin.Context) {
-	g.String(200, "Hello, World!")
+//	@Router			/api/token [post]
+func (s *Server) Token(w http.ResponseWriter, req *http.Request) {
+	if err := req.ParseForm(); err != nil {
+		errhandler.Abort(w, http.StatusBadRequest, fmt.Errorf("failed to parse form: %w", err))
+		return
+	}
+
+	form := req.Form
+	form.Set("client_id", s.Cfg.WebAPIA.ClientID)
+	form.Set("client_secret", s.Cfg.WebAPIA.ClientSecret)
+	form.Set("grant_type", "authorization_code")
+	form.Set("scope", s.Cfg.WebAPIA.Scope)
+
+	resp, err := http.PostForm(s.Cfg.WebAPIA.TokenEndpoint, form)
+	if err != nil {
+		errhandler.Abort(w, http.StatusInternalServerError, fmt.Errorf("failed to forward request: %w", err))
+		return
+	}
+	defer resp.Body.Close()
+	w.WriteHeader(resp.StatusCode)
+	_, _ = io.Copy(w, resp.Body)
 }
 
 // Authorize represents the OAuth 2.0 Authorization Mediation Endpoint.
@@ -59,16 +87,43 @@ func (s *Server) Token(g *gin.Context) {
 //	@Param			code_challenge			query	string	false	"PKCE Code Challenge"
 //	@Param			code_challenge_method	query	string	false	"PKCD Code Challenge Method"
 //	@Success		302
-//	@Router			/authorize [get]
-func (s *Server) Authorize(g *gin.Context) {
-	g.Redirect(302, "/")
+//	@Router			/api/authorize [get]
+func (s *Server) Authorize(w http.ResponseWriter, req *http.Request) {
+	if err := req.ParseForm(); err != nil {
+		errhandler.Abort(w, http.StatusBadRequest, fmt.Errorf("failed to parse form: %w", err))
+		return
+	}
+
+	form := req.Form
+	form.Set("client_id", s.Cfg.WebAPIA.ClientID)
+	form.Set("response_type", "code")
+	form.Set("scope", s.Cfg.WebAPIA.Scope)
+
+	redirect, err := url.Parse(s.Cfg.WebAPIA.AuthorizationEndpoint)
+	if err != nil {
+		errhandler.Abort(w, http.StatusInternalServerError, fmt.Errorf("failed to parse URL: %w", err))
+		return
+	}
+	redirect.RawQuery = form.Encode()
+	http.Redirect(w, req, redirect.String(), http.StatusTemporaryRedirect)
 }
 
 // Validate represents the OAuth 2.0 Token Validation Endpoint.
 //
 //	@Summary	Get a token
-//	@Router		/validate [get]
+//	@Router		/api/validate [get]
 //	@Security	OAuth2Entra
-func (s *Server) Validate(g *gin.Context) {
-	g.String(200, "Hello, World!")
+func (s *Server) Validate(w http.ResponseWriter, req *http.Request) {
+	auth := req.Header.Get("Authorization")
+	if !strings.HasPrefix(auth, "Bearer ") {
+		errhandler.Abort(w, http.StatusUnauthorized, fmt.Errorf("missing bearer token"))
+		return
+	}
+
+	tokenString := strings.TrimPrefix(auth, "Bearer ")
+	parser := jwt.NewParser(jwt.WithAudience(s.Cfg.WebAPIA.Audience), jwt.WithIssuer(s.Cfg.WebAPIA.Issuer))
+	token, _, _ := parser.ParseUnverified(tokenString, &jwt.MapClaims{})
+	encoder := json.NewEncoder(w)
+	encoder.SetIndent("", "  ")
+	encoder.Encode(token.Claims)
 }
