# internal/docs/swagger.json
@@ -12,7 +12,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/authorize": {
+        "/api/authorize": {
             "get": {
                 "description": "OAuth 2.0 Authorization Mediation Endpoint.\nSee https://datatracker.ietf.org/doc/html/draft-ietf-oauth-browser-based-apps#name-token-mediating-backend",
                 "summary": "Get a token",
@@ -50,7 +50,7 @@
                 }
             }
         },
-        "/token": {
+        "/api/token": {
             "post": {
                 "description": "OAuth 2.0 Token Mediation Endpoint.\nSee https://datatracker.ietf.org/doc/html/draft-ietf-oauth-browser-based-apps#name-token-mediating-backend",
                 "consumes": [
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/validate": {
+        "/api/validate": {
             "get": {
                 "security": [
                     {
